// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Рассчитал правильный диапазон цен для чпу 825000 -> 1072500 1`] = `
Array [
  850000,
  900000,
  1000000,
]
`;

exports[`Рассчитал правильный диапазон цен для чпу 900000 -> 1170000 1`] = `
Array [
  900000,
  1000000,
  1100000,
]
`;

exports[`Рассчитал правильный диапазон цен для чпу 2123111 -> 2760000 1`] = `
Array [
  2200000,
  2300000,
  2400000,
  2500000,
  2600000,
  2700000,
]
`;

exports[`Рассчитал правильный диапазон цен для чпу 3125000 -> 4062000 1`] = `
Array [
  3500000,
  4000000,
]
`;

exports[`Рассчитал правильный диапазон цен для чпу 10500000 -> 13650000 1`] = `
Array [
  11000000,
  12000000,
  13000000,
]
`;
